test/tests/operators/accept_http/accept_http_error_max_connections_zero.txt
error: `max_connections` must not be zero
 --> tests/operators/accept_http/accept_http_error_max_connections_zero.tql:5:48
  |
5 | accept_http "127.0.0.1:31337", max_connections=0 {
  |                                                ^ 
  |
